auth_security/dex/gen-output/dex.dex.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
  name: dex
  namespace: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  - name: metrics
    port: 5566
    protocol: TCP
    targetPort: 5566
  selector:
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: dex
  type: ClusterIP
